@startuml erd
 
entity "Book" as Book {
  * _id : ObjectId
  * title : string
  * author : string
  * description : string
  * publicationYear : int
  * createdAt : datetime
  * updatedAt : datetime
  * image : string
  * createBy : ObjectId
}

entity "Community" as Community {
  * _id : ObjectId
  * name : string
  * description : string
  * createdAt : datetime
  * image : string
}

entity "User" as User {
  * _id : ObjectId
  * email : string
  * username : string
  * password : string
  * createdAt : datetime
  * updatedAt : datetime
  * status : string
  * role: boolean
}

entity "Genre" as Genre {
  * _id : ObjectId
  * name : string
  * description : string
   * createBy : ObjectId
}

entity "Post" as Post {
  * _id : ObjectId
  * title : string
  * content : string
  * communityId : ObjectId
  * userId : ObjectId
  * createdAt : datetime
  * updatedAt : datetime
}

entity "Review" as Review {
  * _id : ObjectId
  * bookId : ObjectId
  * userId : ObjectId
  * rating : int
  * review : string
  * createdAt : datetime
}

entity "Favorite" as Favorite {
  * _id : ObjectId
  * userId : ObjectId
  * bookId : ObjectId
  * addedAt : datetime
}



' Relationships
Book }|--|| Genre : belongs to
Book }|--|| User : created by
Post }|--|| Community : belongs to
Post }|--|| User : written by
Review }|--|| Book : for
Review }|--|| User : written by
Favorite }|--|| User : belongs to
Favorite }|--|| Book : belongs to
Community ||--o| User : has members


@enduml
